--- a/index.html
+++ b/index.html
@@ -16,8 +16,33 @@
     <![endif]-->
   </head>
   <body>
-    <img src="" alt="First Card" id="firstCard">
-    <img src="" alt="Second Card" id="secondCard">
+    <div class="row" id="cardRow">
+      <div class="col-sm-6" id="playerOne">
+        <label for="firstCard">Player 1</label>
+        <div><img src="" name="firstCard" alt="First Card" id="firstCard"></div>
+        <div class="row">
+          <label for="pileOne">Cards won:
+            <p id="pileOne" name="pileOne"></p>
+          </label>
+        </div>
+      </div>
+      <div class="col-sm-6" id="playerTwo">
+        <label for="SecondCard">Player 2</label>
+        <div><img src="" name="secondCard" alt="Second Card" id="secondCard"></div>
+        <div class="row">
+          <label for="pileTwo">Cards won:
+            <p id="pileTwo" name="pileTwo"></p>
+          </label>
+        </div>
+      </div>
+    </div>
+    <div class="row" id="controlRow">
+      <div class="col-sm-1-12" id="buttonCol">
+        <button type="button" name="button">GO TO WAR!</button>
+      </div>
+
+    </div>
+
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
