--- a/index.html
+++ b/index.html
@@ -19,28 +19,39 @@
     <div class="row" id="cardRow">
       <div class="col-sm-6" id="playerOne">
         <label for="firstCard">Player 1</label>
-        <div><img src="" name="firstCard" alt="First Card" id="firstCard"></div>
+        <div><img src="http://placekitten.com/226/314" name="firstCard" id="firstCard"></div>
         <div class="row">
-          <label for="pileOne">Cards won:
-            <p id="pileOne" name="pileOne"></p>
+          <label for="gamesOne">Games won:
+            <p id="gamesOne" name="gamesOne">0</p>
           </label>
         </div>
       </div>
       <div class="col-sm-6" id="playerTwo">
         <label for="SecondCard">Player 2</label>
-        <div><img src="" name="secondCard" alt="Second Card" id="secondCard"></div>
+        <div><img src="http://placekitten.com/226/314" name="secondCard" id="secondCard"></div>
         <div class="row">
-          <label for="pileTwo">Cards won:
-            <p id="pileTwo" name="pileTwo"></p>
+          <label for="gamesTwo">Games won:
+            <p id="gamesTwo" name="gamesTwo">0</p>
           </label>
         </div>
       </div>
     </div>
-    <div class="row" id="controlRow">
+    <div class="row" id="buttonRow">
       <div class="col-sm-1-12" id="buttonCol">
-        <button type="button" name="button">GO TO WAR!</button>
+        <button type="button" name="button" id="play">GO TO WAR!</button>
       </div>
-
+    </div>
+    <div class="row">
+      <div class="col-sm-1-12">
+        <p id="message">Test</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-1-12">
+        <label for="decksPlayed">Decks played:
+          <p id="decksPlayed" name="decksPlayed">1</p>
+        </label>
+      </div>
     </div>
 
 
