Working on Safari/phones

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <div class="container-fluid">
     <div class="row" id="cardRow">
-      <div class="col-sm-6" id="playerOne">
+      <div class="col-xs-6" id="playerOne">
         <label for="firstCard">Player 1</label>
         <div><img src="http://placekitten.com/226/314" name="firstCard" id="firstCard"></div>
         <div class="row">
@@ -29,7 +29,7 @@
           </label>
         </div>
       </div>
-      <div class="col-sm-6" id="playerTwo">
+      <div class="col-xs-6" id="playerTwo">
         <label for="secondCard">Player 2</label>
         <div><img src="http://placekitten.com/226/314" name="secondCard" id="secondCard"></div>
         <div class="row">
